--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.2.74",
     "@types/react-dom": "^18.2.24",
     "react": "^18.2.0",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "sass": "^1.74.1",
